features section done with responsive

--- a/index.html
+++ b/index.html
@@ -69,8 +69,60 @@
         </section>
 
         <!-- features will enjoy -->
-        <section>
+        <section class="features display-flex">
+            <div class="feature-info">
+                <h3 id="feature-section-title" class="section-title">
+                    Features you will <br>
+                    love & enjoy
+                </h3>
+                <p class="feature-description text-dark03">
+                    There are many variations of passages of Lorem Ipsum available, but the 
+                    majority have suffered alteration in some form, by injected humour, or 
+                    randomised words which don't look even
+                </p>
 
+                <!-- Feature card container -->
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-dark03">
+                        There are many variations of passages of Lorem Ipsum available, 
+                        but the majority have suffered alteration in some form, by 
+                        injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="text-dark03">
+                        There are many variations of passages of Lorem Ipsum available, 
+                        but the majority have suffered alteration in some form, by 
+                        injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="text-dark03">
+                        There are many variations of passages of Lorem Ipsum available, 
+                        but the majority have suffered alteration in some form, by 
+                        injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="text-dark03">
+                        There are many variations of passages of Lorem Ipsum available, 
+                        but the majority have suffered alteration in some form, by 
+                        injected humour, or randomised...........
+                    </p>
+                </div>
+            </div>
+            <div class="feature-image">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
         </section>
 
         <!-- some facts -->
@@ -114,6 +166,26 @@
                 </div>
             </div>
         </section>
+
+        <!-- Sponsors section -->
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-dark03">
+                    There are many variations of passages of Lorem Ipsum available, but 
+                    the majority have suffered alteration.
+                </p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
+
+
     </main>
 
     <footer>
